2010-11-17  Timothy Hatcher  <timothy@apple.com>

        Fix a crash when closing the inspected page when the Web Inspector
        page was never created.

        https://bugs.webkit.org/show_bug.cgi?id=49687

        Reviewed by John Sullivan.

        * WebProcess/WebCoreSupport/WebInspectorClient.cpp:
        (WebKit::WebInspectorClient::sendMessageToFrontend): Null check the Inspector WebPage.

2010-11-17  Anders Carlsson  <andersca@apple.com>

        Reviewed by John Sullivan.

        Don't crash when invalidating a page overlay that hasn't been installed yet
        https://bugs.webkit.org/show_bug.cgi?id=49685

        Null check the web page.

        * WebProcess/WebPage/PageOverlay.cpp:
        (WebKit::PageOverlay::setNeedsDisplay):

2010-11-17  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=49682 - Expose "removeItemAtIndex" in WKMutableArray

        * Shared/API/c/WKMutableArray.cpp:
        (WKArrayRemoveItemAtIndex):
        * Shared/API/c/WKMutableArray.h:

        * Shared/MutableArray.cpp:
        (WebKit::MutableArray::removeItemAtIndex):
        * Shared/MutableArray.h:

2010-11-17  Brady Eidson  <beidson@apple.com>

        Reviewed by Anders Carlsson.

        https://bugs.webkit.org/show_bug.cgi?id=49683 - Export WKContextMenuItem and WKContextMenuItemTypes as public headers

        * WebKit2.xcodeproj/project.pbxproj:

2010-11-17  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin Adler.

        Need way to invalidate part of a WKOverlayRef so it will be redrawn
        https://bugs.webkit.org/show_bug.cgi?id=49679
        <rdar://problem/8679152>

        * WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.cpp:
        (WKBundlePageOverlaySetNeedsDisplay):
        * WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.h:
        * WebProcess/WebPage/PageOverlay.cpp:
        (WebKit::PageOverlay::setNeedsDisplay):