@@ -1062,12 +1062,6 @@ void WebPage::didReceiveMessage(CoreIPC::Connection* connection, CoreIPC::Messag
         return;
     }
 
-    if (messageID.is<CoreIPC::MessageClassWebInspector>()) {
-        if (WebInspector* inspector = this->inspector())
-            inspector->didReceiveWebInspectorMessage(connection, messageID, arguments);
-        return;
-    }
-
     didReceiveWebPageMessage(connection, messageID, arguments);
 }
 
